src/styles/globals.css
@import "tailwindcss";

section, footer{
	background-color: #181619;
}

section.no-bg {
	background-color: transparent;
}

.bg-img::before {
  content: "";
  position: fixed;
  height: px;
  inset: 0;
  z-index: -1;
  background-image: url('top-image.jpg');
  background-size: cover;
  background-position: center;
}

@media (max-width: 770px) {
  .bg-img::before {
    background-image: url('top-img01.jpg');
  }
}

